Add tests integracao, e2e e mais unitarios para classe banco